--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="flex flex--wrap botones">
                     <p class="error"></p>
                     <p class="mensaje--advertencia">Solo letras minusculas y sin acentos</p>
-                    <button class="btn btn--activo">Encriptar</button>
+                    <button class="btn btn--activo" id="btn-encriptar">Encriptar</button>
                     <button class="btn btn--desactivado" id="btn-desencriptar">Desencriptar</button>
                 </div>
             </section>
@@ -186,7 +186,7 @@
         </section>
     </main>
     <footer>
-        <p>Desarrollado por <a href="https://jorgecornejodev.github.io/" target="_blank">Jorge Cornejo</a></p>
+        <p>Desarrollado con <span>❤</span>  por </p > <a href="https://jorgecornejodev.github.io/" target="_blank">Jorge Cornejo</a>
     </footer>
 
     <script src="./js/app.js"></script>
